solove spacing issues annd images

--- a/src/styles/shadow.css
+++ b/src/styles/shadow.css
@@ -13,3 +13,7 @@
 @utility shadow-hard-card {
   box-shadow: 20px 20px 0px #FFFFFF40;
 }
+
+@utility shadow-4xl {
+  box-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgba(0, 0, 0, 0.25));
+}
